{
    "name": "CubeAction",
    "maps": [
        {
            "name": "InGame",
            "id": "f42b9f81-49b5-40e9-aa45-85f9d87ac984",
            "actions": [
                {
                    "name": "Jump1Started",
                    "type": "Button",
                    "id": "6b468ac3-56f3-42bf-a52b-5d6dbf1da46f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Jump1Finished",
                    "type": "Button",
                    "id": "de9dc7d7-fa42-4be2-a409-e75a0a15cdb2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Jump2Started",
                    "type": "Button",
                    "id": "e4e28f82-0e6f-42ff-a997-4ba63d6f82ca",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Jump2Finished",
                    "type": "Button",
                    "id": "d3b4a11c-16a6-4d01-b172-0a9afe7490e1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Pause",
                    "type": "Button",
                    "id": "2f8240a1-fa7c-4476-b3cc-5f64d7d3ad62",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "EndGame",
                    "type": "Button",
                    "id": "f1a307fb-a4a0-4b89-b264-002ba82a1f0e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RestartGame",
                    "type": "Button",
                    "id": "8ec446a5-3809-40d4-b0fd-03e0004c657b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "877a9f1d-dbfc-48d6-b588-8723de2e1384",
                    "path": "<Keyboard>/f",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "",
                    "action": "Jump1Finished",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c24e096a-2e21-4275-bc45-a933b00d568d",
                    "path": "<Keyboard>/j",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "",
                    "action": "Jump2Finished",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "eae3dc2b-3665-4177-bdc2-01eec2f633f7",
                    "path": "<Keyboard>/f",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Jump1Started",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d3a4eb2b-c6f0-4a0e-83fa-971e1ad0f1d7",
                    "path": "<Keyboard>/j",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Jump2Started",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ec18057d-c96d-4db4-ac14-05d1e985234e",
                    "path": "<Keyboard>/p",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "146f7a25-d13b-4999-8353-f2b6320d5cb1",
                    "path": "<Keyboard>/e",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "EndGame",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "84e2f6c4-02bc-480a-82b6-f142f4bf1242",
                    "path": "<Keyboard>/r",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "RestartGame",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}